# cdi-bonus-assignment

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  execute_instructions  pyproject.toml  pyspark_notebook.py
.cursor/memory/: decisions.md  issues.md  progress.md
.cursor/rules/: coding.mdc
app/: local_silver.py  main.py
app/bronze_pipeline/: bronze_from_parquet.py  local_bronze.py
app/deprecated_notebooks/: silver_from_bronze.py
app/gold_pipeline/: gold_from_silver.py  gold_silver.py
app/helpers/: general_helpers.py  spark_helpers.py
app/silver_pipeline/: local_silver.py  silver_from_bronze.py
data/bronze/bronze_transactions/: .part-00000-b7ae8ae4-249d-4198-b398-d4e240836041-c000.snappy.parquet.crc  .part-00001-614aaa18-fe84-4513-96f9-4ce3b8d60ec2-c000.snappy.parquet.crc  .part-00001-c3edd8e8-e086-466b-bbcb-8311f9472bac-c000.snappy.parquet.crc  .part-00001-e8016ed2-98dd-45d9-ac3e-8538e9354660-c000.snappy.parquet.crc  .part-00003-7e931781-0e3b-4d19-b917-09b6b0388725-c000.snappy.parquet.crc  .part-00003-d3e1dc94-50ee-4a0f-9ac6-d033d22ac101-c000.snappy.parquet.crc  .part-00003-eabfbbb5-c525-4088-af22-036b1b1b26f3-c000.snappy.parquet.crc  .part-00005-6caf5211-c84d-4bc1-8971-066ba99321fb-c000.snappy.parquet.crc  .part-00005-d182c5fc-cf62-4914-9fea-4428ccf31924-c000.snappy.parquet.crc  .part-00005-d1ceac68-e97b-4dfe-9b26-9456b2e70094-c000.snappy.parquet.crc  (+7 more)
data/checkpoints/bronze_display/: .metadata.crc  metadata
tests/: conftest.py  test_general_helpers.py  test_pipeline_transforms.py  test_repository_paths.py
(+58 files in other folders)
